#118 add some welcome examples

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -3,6 +3,8 @@
       "404": "404: Page missing"
    },
    "GLOBAL": {
-      "GREETINGS": "Hello World!"
+      "EXAMPLES": "Examples",
+      "GREETINGS": "Hello World!",
+      "RESOURCES": "Resources"
    }
 }
