--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -3,7 +3,9 @@
       "404": "404: Página no encontrada"
    },
    "GLOBAL": {
-      "GREETINGS": "Hola Mundo!"
+      "EXAMPLES": "Ejemplos",
+      "GREETINGS": "Hola Mundo!",
+      "RESOURCES": "Recursos"
    }
 
 }
